--- a/.imgbotconfig
+++ b/.imgbotconfig
@@ -2,8 +2,8 @@
     "schedule": "daily", // daily|weekly|monthly
     "ignoredFiles": [
     	// "*.jpg",                   // by extension
-    	"image1.png",              // by filename
-    	"public/special_images/*", // by folderpath
+    	// "image1.png",              // by filename
+    	// "public/special_images/*", // by folderpath
     ],
     "aggressiveCompression": true // true|false
 }
